Fix background image on mobile

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -24,7 +24,7 @@ h1 a {
 }
 
 body {
-	background: url('/assets/cup.gif') no-repeat center center fixed; 
+	background: url('/assets/cup.gif'); 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
